# tldr

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml  test.yml
src/: main.rs
