[package]
name = "tldr-line-verifier"
version = "0.1.2"
edition = "2021"
description = "Command line tool to verify the max length of files in a repository."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
regex = "1.8.1"
walkdir = "2.3.3"

[dev-dependencies]
tempdir = "0.3.7"
