[package]
name = "tldr-line-verifier"
version = "0.2.0"
edition = "2024"
description = "Command line tool to verify the max length of files in a repository."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.12"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
